// Copyright (c) 2023 Cisco Systems, Inc. and its affiliates
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http:www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
option go_package="./;awi";

import "network_domain_connection.proto";

/*
Connection Service to connect two different networking domains. 
IND - InterNetworkingDomain
*/

service ConnectionController {

    rpc Connect(ConnectionRequest) 
        returns (ConnectionResponse) {}  

    rpc Disconnect (DisconnectRequest)
        returns (DisconnectResponse) {} 

    rpc GetConnection(GetConnectionRequest)
        returns (ConnectionResponse) {}

    rpc ListConnections (ListConnectionsRequest)
        returns (ListConnectionsResponse) {}

    rpc GetConnectionStatus(ConnectionStatusRequest)
        returns (ConnectionStatusResponse) {}
}
